--- a/AWS_All/Jenkinsfile
+++ b/AWS_All/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
 
         stage('Terraform Init & Apply') {
             steps {
-                dir('EC2_S3') {  // <- run inside the folder containing main.tf
+                dir('AWS_All') {  // <- run inside the folder containing main.tf
                     sh 'terraform init'
                     sh 'terraform plan -out=tfplan'
                     sh 'terraform apply -auto-approve tfplan'
