--- a/AWS_All/Jenkinsfile
+++ b/AWS_All/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
 
         stage('Terraform Destroy') {
             when {
-                 expression { params.DESTROY == true }
+                 expression { params.DESTROY == false }
              }
              steps {
                   dir('EC2_S3') {
